--- a/Actividad 3/index.html
+++ b/Actividad 3/index.html
@@ -4,79 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <style>
-      body {
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-          background-color: #646464;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          height: 100vh;
-          margin: 0;
-      }
-
-      .calculator {
-          background-color: #646464;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-          overflow: hidden;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-          display: flex;
-          flex-direction: column;
-          max-width: 400px;
-      }
-
-      .screen {
-          text-align: right;
-          padding: 30px;
-          color: #ffffff;
-          font-size: 2.2em;
-          background-color: #3b3a3a;
-          border-bottom: 1px solid #ccc;
-      }
-
-      .buttons {
-          display: grid;
-          grid-template-columns: repeat(4, 1fr);
-          gap: 2px;
-          flex-grow: 1;
-      }
-
-      button {
-          padding: 30px;
-          font-size: 1.2em;
-          border: none;
-          outline: none;
-          cursor: pointer;
-          background-color: #504f4fe5;
-          color: #ffffff;
-          transition: background-color 0.3s;
-          flex-grow: 1;
-          border-radius: 10%;
-      }
-
-      button:hover {
-          background-color: rgb(43, 43, 43);
-          border-radius: 15%;
-      }
-
-      button.operator {
-          background-color: rgb(43, 43, 43);
-      }
-      button.nada {
-          background-color: rgb(43, 43, 43);
-      }
-
-      button.operator:hover {
-          background-color: #504f4fe5;
-      }
-
-      button.Igual{
-          background-color: #01cf9fe5;
-      }
-
-
-  </style>
+    <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
     <div class="calculator">
@@ -108,122 +36,7 @@
             <button class="Igual" onclick="calculateResult()">=</button>
         </div>
     </div>
-
-    <script>
-        let screen = document.getElementById('screen');
-        let currentInput = '0';
-        let currentOperator = null;
-        let prevValue = null;
-
-        function appendToScreen(value) {
-            if (currentInput === '0' || currentInput === '-0') {
-                currentInput = value;
-            } else {
-                currentInput += value;
-            }
-            updateScreen();
-        }
-
-        function appendOperator(operator) {
-            currentOperator = operator;
-            prevValue = parseFloat(currentInput);
-            currentInput = '0';
-            updateScreen();
-        }
-
-        function calculateUnary(operation) {
-            const input = parseFloat(currentInput);
-            switch (operation) {
-                case 'inverso':
-                    currentInput = (1 / input).toString();
-                    break;
-                case 'cuadrado':
-                    currentInput = (input ** 2).toString();
-                    break;
-                case 'raizCuadrada':
-                    currentInput = (Math.sqrt(input)).toString();
-                    break;
-                    case 'residuo':
-                    // Llama a la función de residuo con el valor previo y el valor actual
-                    if (prevValue !== null) {
-                        currentInput = residuo(prevValue, input).toString();
-                    }
-                    break;
-                default:
-                    break;
-            }
-            updateScreen();
-        }
-
-        function toggleSign() {
-            if (currentInput !== '0') {
-                currentInput = (parseFloat(currentInput) * -1).toString();
-                updateScreen();
-            }
-        }
-
-        function calculateResult() {
-            if (currentOperator && prevValue !== null) {
-                const currentValue = parseFloat(currentInput);
-                switch (currentOperator) {
-                    case '+':
-                        currentInput = (prevValue + currentValue).toString();
-                        break;
-                    case '-':
-                        currentInput = (prevValue - currentValue).toString();
-                        break;
-                    case '*':
-                        currentInput = (prevValue * currentValue).toString();
-                        break;
-                    case '/':
-                        if (currentValue !== 0) {
-                            currentInput = (prevValue / currentValue).toString();
-                        } else {
-                            currentInput = 'Error';
-                        }
-                        break;
-                    default:
-                        break;
-                }
-                currentOperator = null;
-                prevValue = null;
-                updateScreen();
-            }
-        }
-
-        function limpiar() {
-            currentInput = '0';
-            currentOperator = null;
-            prevValue = null;
-            updateScreen();
-        }
-
-        function updateScreen() {
-            screen.textContent = currentInput;
-        }
-
-        function calculate(event) {
-            if (event.target.tagName === 'BUTTON') {
-                const buttonText = event.target.textContent;
-                switch (buttonText) {
-                    case 'C':
-                        limpiar();
-                        break;
-                    case '=':
-                        calculateResult();
-                        break;
-                    case '⌫':
-                        currentInput = currentInput.slice(0, -1);
-                        if (currentInput === '') {
-                            currentInput = '0';
-                        }
-                        updateScreen();
-                        break;
-                    default:
-                        break;
-                }
-            }
-        }
-    </script>
+<script src="/calculadora.js"></script>
+    
 </body>
 </html>
